--- a/ToDoMvc/ToDoMvc.csproj
+++ b/ToDoMvc/ToDoMvc.csproj
@@ -159,8 +159,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\TagsController.cs" />
     <Compile Include="Controllers\TodoTaskController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -173,10 +175,17 @@
     <Compile Include="Migrations\201503081625425_templates.Designer.cs">
       <DependentUpon>201503081625425_templates.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503102123124_tagscats.cs" />
+    <Compile Include="Migrations\201503102123124_tagscats.Designer.cs">
+      <DependentUpon>201503102123124_tagscats.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Accounts\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Accounts\IdentityModels.cs" />
+    <Compile Include="Models\Accounts\ManageViewModels.cs" />
+    <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\TodoTask.cs" />
     <Compile Include="Models\TodoTaskTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -275,6 +284,16 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Tags\Create.cshtml" />
+    <Content Include="Views\Tags\Delete.cshtml" />
+    <Content Include="Views\Tags\Details.cshtml" />
+    <Content Include="Views\Tags\Edit.cshtml" />
+    <Content Include="Views\Tags\Index.cshtml" />
+    <Content Include="Views\Categories\Create.cshtml" />
+    <Content Include="Views\Categories\Delete.cshtml" />
+    <Content Include="Views\Categories\Details.cshtml" />
+    <Content Include="Views\Categories\Edit.cshtml" />
+    <Content Include="Views\Categories\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -293,6 +312,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503081625425_templates.resx">
       <DependentUpon>201503081625425_templates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503102123124_tagscats.resx">
+      <DependentUpon>201503102123124_tagscats.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
