--- a/ToDoMvc/ToDoMvc.csproj
+++ b/ToDoMvc/ToDoMvc.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\TodoTask.cs" />
     <Compile Include="Models\TodoTaskTemplate.cs" />
+    <Compile Include="Models\ViewModels\TodoTaskTemplateVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
